replace me.html

--- a/me.html
+++ b/me.html
@@ -40,38 +40,43 @@
         h1, h2 {
             margin-top: 0;
         }
+        ul {
+        list-style-type: square; /* ✅ makes bullets squares */
+        padding-left: 20px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <header>
             <!-- Wrap the image in an anchor tag for the clickable functionality -->
-            <a href="C:\Users\speed\Documents\Lewis\GettingToKnowMe\me-750-by-1000.jpg" target="_blank">
-                <img src="C:\Users\speed\Documents\Lewis\GettingToKnowMe\me-225-by-300.jpg" alt="Patrick O'Connor">
+            <a href="./me-750-by-1000.jpg" target="_blank">
+                <img src="./me-225-by-300.jpg" alt="Patrick O'Connor">
             </a>
             <h1>Patrick O'Connor</h1>
             <h2>Preferred Name: Patrick</h2>
+            <p><a href="mailto:patrickdoconnor@lewisu.edu">patrickdoconnor@lewisu.edu</a></p>
+            <p>Discord: devoidcolour</p>
         </header>
 
         <section>
             <h2>Introduction</h2>
-            <p>Example paragraph blah blah blah</p>
+            <p>I am an information technologies major and my parents and I live here in Romeoville. My mom is a home health nurse and my dad designs the IT infrastructure for hospitals.</p>
         </section>
 
         <section>
             <h2>What I Hope to Learn in this Course</h2>
                 <ul>
-        <li>Blank</li>
-        <li>Blank</li>
-        <li>Blank</li>
+        <li>How to code</li>
+        <li>Write a simple program from scratch</li>
         </section>
 
         <section>
-            <h2>My Favorite Hobby / Activity</h2>
+            <h2>My Favorite Hobbies / Activities</h2>
                 <ul>
-        <li>Blank</li>
-        <li>Blank</li>
-        <li>Blank</li>
+        <li><a href="https://en.wikipedia.org/wiki/Photography" target="_blank">Photography</a></li>
+        <li>Gaming</li>
+        <li>Watching youtube</li>
         </section>
 
         <section>
@@ -80,9 +85,16 @@
         </section>
         
         <section>
-            <p>Updated: 9/17/25</p>
+            <p>Updated: 9/21/25</p>
         </section>
         
     </div>
 </body>
 </html>
+
+
+
+
+
+
+
