--- a/me.html
+++ b/me.html
@@ -50,8 +50,8 @@
     <div class="container">
         <header>
             <!-- Wrap the image in an anchor tag for the clickable functionality -->
-            <a href="./me-750-by-1000.jpg" target="_blank">
-                <img src="./me-225-by-300.jpg" alt="Patrick O'Connor">
+            <a href="./me-750-by-1000.png" target="_blank">
+                <img src="./me-225-by-300.png" alt="Patrick O'Connor">
             </a>
             <h1>Patrick O'Connor</h1>
             <h2>Preferred Name: Patrick</h2>
