--- a/me.html
+++ b/me.html
@@ -172,11 +172,7 @@
   <section>
     <h2>My Favorite Hobbies / Activities</h2>
     <ul>
-      <li>
-      <a href="https://en.wikipedia.org/wiki/Photography" target="_blank"
-        >Photography</a
-      >
-      </li>
+      <li><a href="https://en.wikipedia.org/wiki/Photography" target="_blank">Photography</a></li>
       <li>Gaming</li>
       <li>Watching YouTube</li>
     </ul>
